--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,15 @@
     <string name="error_no_internet">No internet connexion!</string>
     <string name="error_unknown_error">An error occurred</string>
 
+
+    <!-- Used in NavigationDrawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <!-- Toolbar-->
+    <string name="text_toolbar">Go4Lunch</string>
+    <string name="I_m_hungry">I\'m hungry</string>
+    <string name="workers_toolbar">Workers</string>
+
+
 </resources>
