--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="app_name" translatable="false">Go4Lunch</string>
 
@@ -18,8 +18,6 @@
     <string name="facebook_login"> Sign with facebook </string>
     <string name="email_login"> Sign with email </string>
     <string name="twitter_login"> Sign with twitter </string>
-
-
     <string name="connection_succeed">Authentication granted !</string>
     <string name="error_authentication_canceled">Authentication canceled</string>
     <string name="no_name_found">No name found</string>
@@ -34,7 +32,7 @@
     <string name="your_lunch">YOUR LUNCH </string>
     <string name="settings">SETTINGS</string>
     <string name="logout">LOG OUT</string>
-    <string name="favorite_restaurants">FAVORITE RESTAURANTS</string>
+    <string name="favorite_restaurants"> Favorite restaurant </string>
 
     <!-- Toolbar-->
     <string name="text_toolbar">Go4Lunch</string>
@@ -54,9 +52,8 @@
     <string name="call">CALL</string>
     <string name="like">LIKE</string>
     <string name="web_site">WEB SITE</string>
-    <string name="favorite_restaurant_message">Restaurant added to your favorite list</string>
+    <string name="favorite_restaurant_message"> Restaurant added to your favorite list</string>
     <string name="favorite_restaurant_exist"> Restaurant already exist </string>
-    <string name="No_one_chose_this_restaurant">No one chose this restaurant</string>
 
     <string name="dislike">Dislike</string>
     <string name="chosen_restaurant">You have chosen this restaurant</string>
@@ -126,18 +123,6 @@
     <string name="notification_workmates_with"> With </string>
     <string name="notifications_disable">  Disable notifications  </string>
     <string name="notifications_enable"> Enable notifications  </string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
 
 </resources>
